# SlicerCATE

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ArterySegmentation/: ArterySegmentation.py  CMakeLists.txt
ArterySegmentation/Resources/UI/: ArterySegmentation.ui
Preprocessing/: CMakeLists.txt  Preprocessing.py
Preprocessing/Resources/UI/: Preprocessing.ui
TortuosityEvaluator/: CMakeLists.txt  TortuosityEvaluator.py
TortuosityEvaluator/Resources/UI/: TortuosityEvaluator.ui
